# Tunnel-simulator

./: .gitignore  CMakeLists.txt  Forgalom.h  Idopont.cpp  Idopont.h  Szimulacio.cpp  Szimulacio.h  enums.h  erzekelok.cpp  erzekelok.h  forgalom.cpp  jarmu.cpp  jarmu.h  lampak.cpp  lampak.h  main.cpp  tests.cpp
